--- a/Qhauntz.uproject
+++ b/Qhauntz.uproject
@@ -12,31 +12,7 @@
 	],
 	"Plugins": [
 		{
-			"Name": "VisualStudioTools",
-			"Enabled": false,
-			"SupportedTargetPlatforms": [
-				"Win64"
-			],
-			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/362651520df94e4fa65492dbcba44ae2"
-		},
-		{
-			"Name": "PythonFoundationPackages",
-			"Enabled": true
-		},
-		{
-			"Name": "PythonAutomationTest",
-			"Enabled": true
-		},
-		{
-			"Name": "Tensorboard",
-			"Enabled": true
-		},
-		{
-			"Name": "MLflow",
-			"Enabled": true
-		},
-		{
-			"Name": "GeometryScripting",
+			"Name": "GameplayAbilities",
 			"Enabled": true
 		}
 	]
